--- a/News/Config.xcconfig
+++ b/News/Config.xcconfig
@@ -8,3 +8,7 @@
 
 // Configuration settings file format documentation can be found at:
 // https://help.apple.com/xcode/#/dev745c5c974
+
+
+server_url                   = www.google.com
+background_color             = #ffffff
