--- a/News/Info.plist
+++ b/News/Info.plist
@@ -19,11 +19,9 @@
 	<key>CFBundleURLTypes</key>
 	<array>
 		<dict>
-			<key>CFBundleTypeRole</key>
-			<string>Editor</string>
 			<key>CFBundleURLSchemes</key>
 			<array>
-				<string>com.googleusercontent.apps.83992737225-5blqpg8hbgksgnoto6nnapu2pa732n82</string>
+				<string>fb1548249458654672</string>
 			</array>
 		</dict>
 	</array>
@@ -50,22 +48,17 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
-	<key>background_color</key>
-	<string>$(background_color)</string>
+	<key>FacebookAppID</key>
+	<string>1548249458654672</string>
+	<key>FacebookDisplayName</key>
+	<string>Rufus</string>
 	<key>server_url</key>
 	<string>$(server_url)</string>
-    <key>CFBundleURLTypes</key>
-    <array>
-        <dict>
-            <key>CFBundleURLSchemes</key>
-            <array>
-                <string>fb1548249458654672</string>
-            </array>
-        </dict>
-    </array>
-    <key>FacebookAppID</key>
-    <string>1548249458654672</string>
-    <key>FacebookDisplayName</key>
-    <string>Rufus</string>
+	<key>background_color</key>
+	<string>$(background_color)</string>
+	<key>navigation_bar_blur_alpha</key>
+	<string>$(navigation_bar_blur_alpha)</string>
+	<key>navigation_bar_color</key>
+	<string>$(navigation_bar_color)</string>
 </dict>
 </plist>
