Added support of offline mode

--- a/News/Config.xcconfig
+++ b/News/Config.xcconfig
@@ -23,3 +23,4 @@ BUTTON_COLOR                 = #46B2F7
 TITLE_FONT_SIZE              = 21
 SUBTITLE_FONT_SIZE           = 18
 TEXT_FONT_SIZE               = 17
+WARNING_TEXT_COLOR           = #C5C5CA
