--- a/News/Info.plist
+++ b/News/Info.plist
@@ -62,27 +62,29 @@
 	</array>
 	<key>background_color</key>
 	<string>$(BACKGROUND_COLOR)</string>
-	<key>text_color</key>
-	<string>$(TEXT_COLOR)</string>
+	<key>button_color</key>
+	<string>$(BUTTON_COLOR)</string>
+	<key>hamburger_menu_color</key>
+	<string>$(HAMBURGER_MENU_COLOR)</string>
 	<key>navigation_bar_blur_alpha</key>
 	<string>$(NAVIGATION_BAR_BLUR_ALPHA)</string>
 	<key>navigation_bar_color</key>
 	<string>$(NAVIGATION_BAR_COLOR)</string>
 	<key>navigation_bar_use_blur</key>
 	<string>$(NAVIGATION_BAR_USE_BLUR)</string>
-	<key>title_color</key>
-	<string>$(TITLE_COLOR)</string>
-	<key>hamburger_menu_color</key>
-	<string>$(HAMBURGER_MENU_COLOR)</string>
-	<key>button_color</key>
-	<string>$(BUTTON_COLOR)</string>
-	<key>title_font_size</key>
-	<string>$(TITLE_FONT_SIZE)</string>
-	<key>text_font_size</key>
-	<string>$(TEXT_FONT_SIZE)</string>
 	<key>subtitle_font_size</key>
 	<string>$(SUBTITLE_FONT_SIZE)</string>
+	<key>text_color</key>
+	<string>$(TEXT_COLOR)</string>
+	<key>text_font_size</key>
+	<string>$(TEXT_FONT_SIZE)</string>
+	<key>title_color</key>
+	<string>$(TITLE_COLOR)</string>
+	<key>title_font_size</key>
+	<string>$(TITLE_FONT_SIZE)</string>
 	<key>warning_text_color</key>
 	<string>$(WARNING_TEXT_COLOR)</string>
+	<key>credits_for_purchase</key>
+	<string>$(CREDITS_FOR_PURCHASE)</string>
 </dict>
 </plist>
