--- a/News/Config.xcconfig
+++ b/News/Config.xcconfig
@@ -3,7 +3,7 @@
 //  News
 //
 //  Created by Tomas Pecuch on 16/10/2018.
-//  Copyright © 2018 Touch Art. All rights reserved.
+//  Copyright © 2018 Tomas Pecuch. All rights reserved.
 //
 // Configuration settings file format documentation can be found at:
 // https://help.apple.com/xcode/#/dev745c5c974
