--- a/News/Config.xcconfig
+++ b/News/Config.xcconfig
@@ -10,8 +10,8 @@
 
 #include "Pods/Target Support Files/Pods-News/Pods-News.debug.xcconfig"
 
-// background color of all the pages
-BACKGROUND_COLOR             = #000000
+// name of the image used as a logo inside the app
+LOGO_IMAGE_NAME              = logo
 // determines the usage of blur effect on navigation bar
 NAVIGATION_BAR_USE_BLUR      = true
 // 0 means max blur 1 is minimum blur
@@ -21,22 +21,19 @@ NAVIGATION_BAR_COLOR         = #FFFFFF
 // color of the top part of the hamburger menu
 HAMBURGER_MENU_COLOR         = #46B2F7
 // color of the title and subtitle in articles preview page,
-// static page (terms of usage etc.) and navigation bar text
+// static page (terms of usage etc.) and navigation bar categories
 TITLE_COLOR                  = #000000
-// color of the text in static page (article text color can be set up inside Style.css)
-TEXT_COLOR                   = #000000
 // color of the buttons
-BUTTON_COLOR                 = #46B2F7
+BUTTON_COLOR                 = #C5C5CA
 // color of the image placeholders
-PLACEHOLDER_COLOR            = #46B2F7
-// font of all text inside the app, system font is used if left empty
+PLACEHOLDER_COLOR            = #C5C5CA
+// font of almost all text inside the app, system font is used if left empty
+// static page text font and article text font can be set inside Style.css
 TEXT_FONT                    =
 // font size of the title in article preview page and static page
 TITLE_FONT_SIZE              = 17
 // font size of the subtitle in article preview page and static page
 SUBTITLE_FONT_SIZE           = 15
-// font size of text in static page (article text font size can be adjusted inside Style.css)
-TEXT_FONT_SIZE               = 17
 // color of the warning texts
 WARNING_TEXT_COLOR           = #C5C5CA
 // number of credits aquired by the purchase
